# loop-orchestration

./: README.md  loop-sessions.sh  loop.sh  prd.json  progress.txt  pyproject.toml
.devcontainer/: devcontainer.json
prompts/: ralph-agent.md
src/: __init__.py  completion.py  config.py  display.py  health.py  loop_engine.py  main.py  ollama_client.py  phases.py  session.py  session_cli.py  skill_orchestrator.py
src/skills/: __init__.py  base.py  implementer.py  prd_interviewer.py  refactorer.py  researcher.py  reviewer.py
src/tools/: __init__.py  file_ops.py  shell.py
tasks/: architecture.md  prd.md
